--- a/Develop/package.json
+++ b/Develop/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^8.2.0"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.7",
     "@apollo/server": "^4.7.1",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
