--- a/Develop/server/package.json
+++ b/Develop/server/package.json
@@ -11,6 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.7.14",
+    "apollo-server-express": "^3.6.2",
+    "graphql": "^16.6.0",
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
